Fix overflow

--- a/src/style/scrapeResult.scss
+++ b/src/style/scrapeResult.scss
@@ -1,13 +1,14 @@
 .scrape-result {
-    background: linear-gradient(65deg, $nephritis 0, $emerland 100%);
-    color: $white;
+  background: linear-gradient(65deg, $nephritis 0, $emerland 100%);
+  color: $white;
 }
 
 .scrape-json {
-    color: $black;
-    text-align: left;
-    width: 100%;
-    padding: 30px;
-    background: $light-gray;
-    border-radius: $radius;
+  color: $black;
+  text-align: left;
+  width: 100%;
+  padding: 30px;
+  background: $light-gray;
+  border-radius: $radius;
+  overflow-x: scroll;
 }
